# neuromorphic_au_drone_racing

./: LICENSE  README.md  develop.sh  evaluate.py  requirements.txt  settings.json  train.py
datacollection/: event_simulator.py  offline_data_collector.py  online_data_collector.py  test_event_sim.py
datacollection/annotation/: projection_gate_bb_annotation.py  quaternion_utils.py  segmentation_gate_bb_annotation.py  segmentation_gate_bb_annotation_v2.py  segmentation_gate_bb_annotation_v3.py
misc/dvs_parser/: CMakeLists.txt  package.xml
misc/dvs_parser/src/: parse_dvs_events.py  record_dvs_events.py
myconfig/: settings.py  settings.yaml
mydataloader/: dataset.py  loader.py
myevaluation/: model_evaluation_mAP.py  sliding_window_flops.py  test_gatenet_N_AU_DR.py  test_vgg_prophesee.py
mylayers/: conv_GRU.py  dense_conv_GRU.py
mymodels/: sparse_RNN_object_det.py  yolo_loss.py
ros/: develop.sh
ros/event_detector_rt/: CMakeLists.txt  package.xml
ros/event_detector_rt/config/: settings.yaml
ros/event_detector_rt/launch/: detector.launch
ros/event_detector_rt/msg/: BoundingBox.msg
ros/event_detector_rt/nodes/: detector.py
ros/event_preprocessor/: CMakeLists.txt  README.md  package.xml
ros/event_preprocessor/include/event_preprocessor/: event_preprocessor.h
ros/event_preprocessor/launch/: event_preprocessor.launch
ros/event_preprocessor/msg/: HistogramStamped.msg
ros/event_preprocessor/scripts/: test_python_client.py
ros/event_preprocessor/src/: event_preprocessor.cpp  event_preprocessor_node.cpp
visualization/: dataset_visualization.py
(+8 files in other folders)
